# SAT

./: .gitignore  Pipfile  README.md  dash_window.py  dataclasses.py  delegate.py  main.py  main2.py  main_app.py  main_ui.py  main_win.py  mock.py  mock2.py  model.py  parse.py  parser.py  pyproject.toml  schedule.py  scheduleclasses.py  test.py  ui_elements.py  view.py  xlsIO.py
ex_ver/: dash_window.py  parse.py  schedule.py
example/: 5_NB67_SAT_Schedule_Rev_1.xlsx  5_NB67_SAT_Schedule_Rev_3.xlsx  5_NB70_SAT_Schedule_Rev_0.xlsx  example.xlsx
example_code/: imagemodel.py  main.py  mainwindow.py  mock.py  mock2.py  mock2.qml  pixeldelegate.py  test.py  test.qml
example_xls/: 5_NB67_SAT_Schedule_Rev_0.xlsx  5_NB67_SAT_Schedule_Rev_2.xlsx  5_NB70_SAT_Schedule_Rev_0.xlsx  5__SAT_Schedule_Rev_2.xlsx
qml/: Dash.qml  Halo.qml  ListItem.qml  halo.qml  main.qml  mock.qml  test.qml
satDash/: __main__.py  delegate.py  main_win.py  model.py  view.py  xlsIO.py
satDash/qml/: Dash.qml
src/: runner.py
src/satDash/: __init__.py  __main__.py  dash_window.py  delegate.py  main_win.py  model.py  scheduleclasses.py  view.py  xlsIO.py
src/satDash/qml/: Dash.qml  Fonts.qml  Halo.qml
tests/unit/: scheduleclasses_test.py
