[tool.poetry]
name = "satDash"
version = "0.1.0"
description = ""
authors = ["erdurano <erdurano@gmail.com>"]
packages = [
    { include = "satDash", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
openpyxl = "^3.0.10"
PySide6 = "^6.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
